@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.70 2004/07/12 15:01:17 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.71 2004/07/13 14:06:44 zhen Exp $
+
+  13 Jul 2004; <zhen@gentoo.org> livecd/runscript-support/livecdfs-update.sh:
+  changed the behavior of rcadd/ rcdel. it was getting hokey to have to add the
+  default rc'ed programs when only one change was required to rcadd. so I
+  changed it so that the defaults are *always* loaded and specified additions/
+  deletions are just added on top of those.
 
   12 Jul 2004; John Davis <zhen@gentoo.org> catalyst,
   targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
